# Inferdum

./: .clang-format  CMakeLists.txt  format.sh
App/: App.cpp
include/Inferdum/: Inferdum.h  components.h  math.h  meta.h  version.h  window.h
include/Inferdum/components/: texture.h  transform.h  vector.h
include/Kat/: EasyDear.hpp  Kat.h  batch.h  components.h  input.h  math.h  meta.h  resource.h  vector.h  version.h  window.h
include/Kat/components/: animator.h  sprite.h  texture.h
include/Kat/scripting/: kat_lua.h
include/Kat/scripting/sol/: config.hpp  sol.hpp
include/Kat/sol/: forward.hpp  sol.hpp
src/: EasyDear.cpp  Kat.cpp  batch.cpp  components.cpp  input.cpp  meta.cpp  resource.cpp  version.cpp  window.cpp
src/components/: animator.cpp  sprite.cpp  texture.cpp  transform.cpp  vector.cpp
src/entt/: entt.cpp
src/scripting/: kat_lua.cpp
